--- a/index.html
+++ b/index.html
@@ -52,19 +52,13 @@
       <section>
 <h2>About me</h2>
 <p>
-  I am a final-year Economics student at 
-  <a href="https://www.up.edu.pe/" target="_blank">Universidad del Pacífico</a> 
-  and a Research Assistant at the 
-  <a href="https://ciup.up.edu.pe/" target="_blank">Centro de Investigación de la Universidad del Pacífico (CIUP)</a>, 
-  where I work with Professor Pablo Lavado. 
-  I have also served as a Teaching Assistant for Econometrics I and worked on economic consulting projects 
-  in education, health, labor markets, and social policy.
+  I am a graduate in Economics from <a href="https://www.up.edu.pe/" target="_blank">Universidad del Pacífico</a>
+  and currently undertaking an internship at the <a href="https://www.fao.org/" target="_blank">Food and Agriculture Organization (FAO)</a>.
+  Previously, I worked as a Research Assistant at the <a href="https://ciup.up.edu.pe/" target="_blank">Centro de Investigación de la Universidad del Pacífico (CIUP)</a>,
+  where I collaborated with Professor Pablo Lavado. I have also served as a Teaching Assistant for Econometrics I and participated in economic consulting projects in education, health, labor markets, and social policy.
 </p>
 <p>
-  My research interests lie in applied microeconomics, behavioral economics, and impact evaluation. 
-  I will soon join the Research Department at the 
-  <a href="https://www.fao.org/" target="_blank">Food and Agriculture Organization (FAO)</a>. My long-term goal is to pursue a PhD in Economics, 
-  focusing on empirical work that addresses development challenges using causal inference methods.
+  My research interests lie in applied microeconomics, behavioral economics, and impact evaluation. My long-term goal is to pursue a PhD in Economics, focusing on empirical research that addresses development challenges using causal inference methods.
 </p>
 
 
@@ -118,7 +112,7 @@
           <li>
             <strong>Econometrics I</strong>
             <br>
-            Graduate course, Universidad del Pacífico, 2025-I
+            Undergraduate course, Universidad del Pacífico, 2025-I
             <br>
           </li>
         </ul>
