--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <section>
 <h2>About me</h2>
 <p>
-  I am a graduate in Economics from <a href="https://www.up.edu.pe/" target="_blank">Universidad del Pacífico</a>
+  I am a graduate in economics from <a href="https://www.up.edu.pe/" target="_blank">Universidad del Pacífico</a>
   and currently undertaking an internship at the <a href="https://www.fao.org/" target="_blank">Food and Agriculture Organization (FAO)</a>.
-  Previously, I worked as a Research Assistant at the <a href="https://ciup.up.edu.pe/" target="_blank">Centro de Investigación de la Universidad del Pacífico (CIUP)</a>,
-  where I collaborated with Professor Pablo Lavado. I have also served as a Teaching Assistant for Econometrics I and participated in economic consulting projects in education, health, labor markets, and social policy.
+  Previously, I worked as a research assistant at the <a href="https://ciup.up.edu.pe/" target="_blank">Centro de Investigación de la Universidad del Pacífico (CIUP)</a>,
+  where I collaborated with professor Pablo Lavado. I have also served as a teaching assistant for Econometrics I and participated in economic consulting projects in education, health, labor markets, and social policy.
 </p>
 <p>
   My research interests lie in applied microeconomics, behavioral economics, and impact evaluation. My long-term goal is to pursue a PhD in Economics, focusing on empirical research that addresses development challenges using causal inference methods.
