--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
     Conducted diagnostic analysis of university teaching careers in Peru and contributed to the design of a compensation determination model for public university faculty.
   </li>
   <li>
-    Supported impact evaluation of the Emergency Bonus implemented by the Dominican Republic Government following Hurricane Fiona (2022).
+    Supported empirical analysis on the determinants of university dropout during the COVID-19 pandemic to document correlational patterns.
   </li>
   <li>
     Estimated return on investment in public health through cost-benefit analysis applied to overweight, obesity, and comorbidity treatment programs.
   </li>
+  <li>
+    Contributed to a policy-oriented report reviewing proposed labor market policies aimed at improving employment outcomes and reducing informality in Peru.  </li>
   <li>
     Contributed to theory of change development and district prioritization using early childhood development indicators for Peru Sostenible's "Juntos por las Personas" intervention.
   </li>
